--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/customTheme">
         <activity
             android:name=".MainScreen"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/customTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,31 +22,31 @@
         <activity
             android:name=".Customize"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme"/>
         <activity
             android:name=".History"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme"/>
         <activity
             android:name=".ManageCategories"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme" />
         <activity
             android:name=".IndividualStats"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme"/>
         <activity
             android:name=".EditHistory"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme" />
         <activity
             android:name=".MainStats"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme"/>
         <activity
             android:name=".ManageActivities"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/customTheme" />
     </application>
 
 </manifest>
