--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,11 @@
         <activity
             android:name=".Customize"
             android:label="@string/app_name"
-            android:theme="@style/customTheme"/>
+            android:theme="@style/customTheme" />
         <activity
             android:name=".History"
             android:label="@string/app_name"
-            android:theme="@style/customTheme"/>
+            android:theme="@style/customTheme" />
         <activity
             android:name=".ManageCategories"
             android:label="@string/app_name"
@@ -34,7 +34,7 @@
         <activity
             android:name=".IndividualStats"
             android:label="@string/app_name"
-            android:theme="@style/customTheme"/>
+            android:theme="@style/customTheme" />
         <activity
             android:name=".EditHistory"
             android:label="@string/app_name"
@@ -42,9 +42,13 @@
         <activity
             android:name=".MainStats"
             android:label="@string/app_name"
-            android:theme="@style/customTheme"/>
+            android:theme="@style/customTheme" />
         <activity
             android:name=".ManageActivities"
+            android:label="@string/app_name"
+            android:theme="@style/customTheme" />
+        <activity
+            android:name=".ActivityHistory"
             android:label="@string/app_name"
             android:theme="@style/customTheme" />
     </application>
